--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ pickle-email-*.html
 /.bundle
 /vendor/bundle
 
+/config/database.yml
+
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
